--- a/.eslintrc
+++ b/.eslintrc
@@ -8,10 +8,17 @@
     "extends": ["eslint:recommended", "plugin:react/recommended"],
     "parser": "babel-eslint",
     "env": {
-      "browser": true
+      "browser": true,
+      "node":true
     },
     "rules": {
       "react/prop-types": "off",
       "semi": "error"
+    },
+    
+    "globals": {
+      "process": true
     }
+
+  
   }
